--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
+    "find": "^0.2.9",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {},
